# spxknow

./: .gitignore  Dockerfile  README.md  test-html-document.html
spx-knowledge-backend/: .gitignore  1.1.0  1.2.0  3.0.0  4.0.0  MySQL表结构校验报告.md  README.md  README_windows.md  README_开发报告.md  SECURITY_AUDIT.md  app.py  celerybeat-schedule.dir  env.example  init.sql  package-lock.json  package.json  pyproject.toml  python-docx乱码处理讨论.md  requirements.txt  中间件服务使用指南.md  后端开发总结报告.md
spx-knowledge-backend/app/: __init__.py  main.py
spx-knowledge-backend/app/config/: __init__.py  celery.py  database.py  logging.py  minio.py  ollama.py  opensearch.py  redis.py  settings.py
spx-knowledge-backend/app/core/: __init__.py  cache.py  constants.py  document_modification_errors.py  exceptions.py  logging.py  pagination.py  response.py  (+2 more)
spx-knowledge-backend/celery_worker/: 0.10.0  __init__.py  app.py  worker.py
spx-knowledge-backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.middleware.yml  docker-compose.prod.yml  docker-compose.yml  redis.conf
spx-knowledge-backend/docs/: ClamAV安装和使用指南.md  chunking_storage_and_editing.md  远程ClamAV配置指南.md
spx-knowledge-backend/migrations/: 2025011501_observability_tables.sql  2025011502_observability_schema_update.sql  2025011503_diagnosis_iterations_memories.sql  2025011701_fix_resource_sync_states_schema.sql  2025011702_fix_resource_events_schema.sql  2025012001_user_authentication_tables.sql  2025012002_fix_qa_sessions_user_id.sql  2025012301_search_history_table.sql  2025012302_document_toc_table.sql  2025012303_user_statistics_tables.sql  2025012304_export_tasks_table.sql  2025012401_add_toc_chunk_link.sql  2025012501_add_security_scan_fields.sql  2025012502_update_existing_documents_security_scan.sql  2025012801_batch_upload_and_retry_tables.sql  2025012802_add_kb_auto_tagging_config.sql  2025020201_kb_members_and_visibility.sql  2025020202_update_kb_visibility.sql  202511141033_fix_diagnosis_soft_delete.sql  2025120813_fix_ocr_text_field_type.sql  add_converted_pdf_url.sql
spx-knowledge-backend/requirements/: base.txt  dev.txt  docs.txt  prod.txt  test.txt
spx-knowledge-backend/scripts/: __init__.py  assign_user_id_to_existing_data.py  backup.py  check_cuda_compatibility.py  check_migration.py  check_user_id_fields.py  cleanup_beat_schedule.py  cleanup_celery_tasks.py  cleanup_redis_beat.py  fix_rtx5090_pytorch.sh  health_check.py  init_db.py  install_pytorch_rtx5090.sh  migrate.py  reindex_from_minio.py  rescan_historical_documents.py  run_migration.py  run_migrations.py  run_single_migration.py  seed_data.py  update_kb_visibility.py  verify_migration.py
spx-knowledge-backend/tests/: conftest.py
(+354 files in other folders)
